SmartTravel/force-app/main/default/objects/Booking__c/fields/Booking_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Name__c</fullName>
    <displayFormat>BKG-{0000}</displayFormat>
    <label>Booking Name</label>
    <type>AutoNumber</type>
</CustomField>