SmartTravel/force-app/main/default/objects/Booking__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <label>Itinerary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>