SmartTravel/force-app/main/default/objects/Booking__c/fields/Safety_Notes__c.field-meta.xml
<CustomField>
    <fullName>Safety_Notes__c</fullName>
    <label>Safety Notes</label>
    <type>TextArea</type>
</CustomField>